* Added db schema docs * Changed mvn project name to ubmod-portal * Changed types to BigInteger